--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,45 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.5.31'
+        minSdkVersion = 24
+        compileSdkVersion = 31
+        targetSdkVersion = 31
+    }
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // Navigation
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+
+        // CodeStyle
+        classpath "org.jmailen.gradle:kotlinter-gradle:3.6.0"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.18.1"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    apply plugin: "org.jmailen.kotlinter"
+    apply plugin: "io.gitlab.arturbosch.detekt"
     repositories {
         google()
         mavenCentral()
     }
-    dependencies {
-        classpath "com.android.tools.build:gradle:7.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    kotlinter {
+        indentSize = 4
+        disabledRules = ["no-wildcard-imports"]
     }
 }
 
