--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
     buildTypes {
         all {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'BASE_URL', "\"https://google.com/\""
         }
         debug {
             minifyEnabled false
@@ -65,6 +66,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += "-Xopt-in=org.koin.core.component.KoinApiExtension"
     }
 
     aaptOptions {
