--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.gms.google-services'
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -128,7 +129,8 @@ dependencies {
     def play_services_version = "19.2.0"
     implementation "com.google.android.gms:play-services-auth:$play_services_version"
 
-    def firebase_version = "21.0.1"
-    implementation "com.google.firebase:firebase-auth-ktx:$firebase_version"
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
+    def firebase_bom_version = "29.0.1"
+    implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
