--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ buildscript {
         classpath "org.jmailen.gradle:kotlinter-gradle:3.6.0"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.18.1"
 
+        // Firebase
+        classpath 'com.google.gms:google-services:4.3.10'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
